# autonomous_exploration

./: .gitignore  ARCHITECTURE.md  CUSTOM_WORLD.md  INSTALL.md  ORB_SLAM3_SETUP.md  README.md  package.xml  setup.py
autonomous_exploration/: explore_node.py
config/: explore_params.yaml  nav2_params.yaml  slam_toolbox.yaml
launch/: explore.launch.py  nav2.launch.py  slam.launch.py  spawn_only.launch.py
rviz/: nav.rviz  slam.rviz  spawn.rviz
urdf/: rover.urdf.xacro
worlds/: custom_world.world
